Sun Nov 30 18:22:48 2003  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in: do not override CCDLDFLAGS, LDFLAGS, XLDFLAGS,
	  DLDFLAGS and LDSHARED.

	* configure.in: XCFLAGS for compiling ruby itself.  ARCH_FLAG is
	  reflected in CFLAGS.

	* lib/mkmf.rb: ditto.  do not import XCFLAGS from config.status.

Sun Nov 30 17:37:36 2003  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: bug fix [ruby-talk:86746]

Sun Nov 30 13:02:00 2003  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/soap/encodingstyle/soapHandler.rb: refactoring - Simplifying
	  Conditional Expressions.

	* lib/wsdl/soap/definitions.rb: refactoring - Move Method.

	* test/xsd/{test_noencoding.rb,noencoding.xml}: new files.  test for
	  encoding unspecified XML file parsing.

	* test/wsdl/{test_fault.rb,map,datetime}: new files.  test of
	  SOAPFault, dateTime and Apache's Map.

Sun Nov 30 09:35:14 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_update): get rid of SEGV at just allocated String.
	  [ruby-core:01812]

Fri Nov 28 23:19:34 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* gc.c (gc_mark): explicitly check mark recursion levels, instead
	  of unreliable stack length.

Fri Nov 28 22:49:56 2003  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/rinda/rinda.rb: fix TupleSpaceProxy#read, read_all.

Fri Nov 28 21:44:40 2003  WATANABE Hirofumi  <eban@ruby-lang.org>

	* test/fileutils/test_fileutils.rb (test_ln_s): should be a file, not
	  a directory for FreeBSD.

Fri Nov 28 19:37:56 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (env_has_value, env_index): must match exactly.

	* test/ruby/test_env.rb (test_has_value, test_index): condition for
	  aboves.

Fri Nov 28 17:59:20 2003  NAKAMURA Usaku <usa@ruby-lang.org>

	* test/ruby/test_env.rb: add tests for ENV.

Fri Nov 28 17:47:46 2003  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb (DRbMessage#load): rescue Errno::* and raise
	  DRbConnError.
